--- a/templates/kippo.cfg.tmpl
+++ b/templates/kippo.cfg.tmpl
@@ -28,12 +28,12 @@ hostname = sales
 # Directory where to save log files in.
 #
 # (default: log)
-log_path = log
+log_path = /var/kippo/log
 
 # Directory where to save downloaded (malware) files in.
 #
 # (default: dl)
-download_path = dl
+download_path = /var/kippo/dl
 
 # Maximum file size for downloaded files. A value of 0 means no limit.
 # If the file size is known to be too big from the start, the file will not be
