--- a/templates/dionaea.conf.tmpl
+++ b/templates/dionaea.conf.tmpl
@@ -169,7 +169,7 @@ listen =
 		 at runtime, and start/stop services dynamically per address per interface
 	*/
 	     
-	mode = "getifaddrs"
+	mode = "manual"
 	addrs = { %%IFACE%% = ["::"] }
 }
 
