Changing default hostname
sales just screams 'kippo'

--- a/templates/kippo.cfg.tmpl
+++ b/templates/kippo.cfg.tmpl
@@ -18,7 +18,7 @@ ssh_port = 2222
 # environment.
 #
 # (default: sales)
-hostname = sales
+hostname = server
 
 # Maximum number of concurrent connections to the honeypot
 #
