--- a/templates/dionaea.conf.tmpl
+++ b/templates/dionaea.conf.tmpl
@@ -170,7 +170,7 @@ listen =
 	*/
 	     
 	mode = "manual"
-	addrs = { %%IFACE%% = ["::"] }
+	addrs = { %%IFACE%% = ["::", "0.0.0.0"]
 }
 
 modules = {
